--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_tampil_mahasiswa">TampilMahasiswaActivity</string>
+    <string name="title_activity_forex_main">ForexMainActivity</string>
 </resources>
