--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_tampil_mahasiswa">TampilMahasiswaActivity</string>
     <string name="title_activity_forex_main">ForexMainActivity</string>
+    <string name="title_activity_cuaca_main">CuacaMainActivity</string>
 </resources>
